migrate from custom mappers to MapStruct ones